--- a/Module_4/FileSystemVisitorLibrary/FileSystemVisitorLibrary.csproj
+++ b/Module_4/FileSystemVisitorLibrary/FileSystemVisitorLibrary.csproj
@@ -10,6 +10,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="13.2.28" />
   </ItemGroup>
 
 </Project>
