--- a/Module_4/Task1/Task1.csproj
+++ b/Module_4/Task1/Task1.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="13.2.28" />
   </ItemGroup>
 
   <ItemGroup>
