--- a/Module_9/Tasks.Test/Tasks.Test.csproj
+++ b/Module_9/Tasks.Test/Tasks.Test.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FizzBuzz\FizzBuzz.csproj" />
+    <ProjectReference Include="..\MineFields\MineFields.csproj" />
   </ItemGroup>
 
 </Project>
