--- a/Module_10/Logging/BrainstormSessions/BrainstormSessions.csproj
+++ b/Module_10/Logging/BrainstormSessions/BrainstormSessions.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="3.1.5" />
   </ItemGroup>
 
 </Project>
